--- a/sass/fab.scss
+++ b/sass/fab.scss
@@ -11,7 +11,7 @@ $fabHW: 55px;
     width: $fabHW;
     border-radius: ($fabHW / 2);
 
-    background-color: $colorAccent;
+    background-color: $color-accent;
     color: #fff;
 
     transition: box-shadow .25s ease-in-out;
