--- a/sass/bootstrap-customization.scss
+++ b/sass/bootstrap-customization.scss
@@ -1,4 +1,4 @@
-@import "colors";
+@import'colors';
 
 .btn-default {
   color: #333;
@@ -58,29 +58,29 @@ fieldset[disabled] .btn-default.focus {
   background-color: #333;
 }
 
-/*Primary buttons*/
+//Primary buttons
 
 .btn-primary {
-  color: $colorPrimaryContrast;
-  background-color: $colorPrimary;
-  border-color: darken($colorPrimary, 5%);
+  color: $color-primary-contrast;
+  background-color: $color-primary;
+  border-color: darken($color-primary, 5%);
 }
 .btn-primary:focus,
 .btn-primary.focus {
-  color: $colorPrimaryContrast;
-  background-color: darken($colorPrimary, 5%);
-  border-color: darken($colorPrimary, 10%);
+  color: $color-primary-contrast;
+  background-color: darken($color-primary, 5%);
+  border-color: darken($color-primary, 10%);
 }
 .btn-primary:hover {
-  color: $colorPrimaryContrast;
-  background-color: darken($colorPrimary, 5%);
-  border-color: darken($colorPrimary, 10%);
+  color: $color-primary-contrast;
+  background-color: darken($color-primary, 5%);
+  border-color: darken($color-primary, 10%);
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-  color: $colorPrimaryContrast;
-  border-color: darken($colorPrimary, 15%);
+  color: $color-primary-contrast;
+  border-color: darken($color-primary, 15%);
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -91,9 +91,9 @@ fieldset[disabled] .btn-default.focus {
 .btn-primary:active.focus,
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
-  color: $colorPrimaryContrast;
-  background-color: darken($colorPrimary, 15%);
-  border-color: darken($colorPrimary, 20%);
+  color: $color-primary-contrast;
+  background-color: darken($color-primary, 15%);
+  border-color: darken($color-primary, 20%);
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -109,19 +109,19 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: lighten($colorPrimary, 10%);
-  border-color: lighten($colorPrimary, 5%);
+  background-color: lighten($color-primary, 10%);
+  border-color: lighten($color-primary, 5%);
 }
 .btn-primary .badge {
-  color: $colorPrimary;
-  background-color: $colorPrimaryContrast;
+  color: $color-primary;
+  background-color: $color-primary-contrast;
 }
 
-/*Navbar*/
+//Navbar
 
 .navbar-default {
-  background-color: darken($colorBackground, 5%);
-  border-color: $colorGrey;
+  background-color: darken($color-background, 5%);
+  border-color: $color-grey;
 }
 .navbar-default .navbar-brand {
   color: #777;
@@ -132,7 +132,7 @@ fieldset[disabled] .btn-primary.focus {
   background-color: transparent;
 }
 .navbar-default .navbar-text {
-  color: $colorFont;
+  color: $color-font;
 }
 .navbar-default .navbar-nav > li > a {
   color: #777;
@@ -145,8 +145,8 @@ fieldset[disabled] .btn-primary.focus {
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: $colorFont;
-  background-color: darken($colorBackground, 5%);
+  color: $color-font;
+  background-color: darken($color-background, 5%);
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
@@ -216,112 +216,96 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 
-/* Panels */
+//Panels
 
 .panel {
-  background-color: darken($colorBackground, 5%);
-  border: 1px solid $colorGrey;
+  background-color: darken($color-background, 5%);
+  border: 1px solid $color-grey;
 
   a {
-      color: $colorFont;
+      color: $color-font;
   }
 }
 .panel-body {
-  background-color: $colorBackground;
+  background-color: $color-background;
 }
 .panel-heading {
   border-bottom: 1px solid transparent;
 }
 .panel-heading > .dropdown .dropdown-toggle {
-  color: $colorFont;
+  color: $color-font;
 }
 .panel-title {
-  color: $colorFont;
+  color: $color-font;
 }
 .panel-footer {
-  background-color: darken($colorBackground, 5%);
-  border-top: 1px solid $colorGrey;
+  background-color: darken($color-background, 5%);
+  border-top: 1px solid $color-grey;
 }
 .panel > .panel-body + .table,
 .panel > .panel-body + .table-responsive,
 .panel > .table + .panel-body,
 .panel > .table-responsive + .panel-body {
-  border-top: 1px solid $colorGrey;
+  border-top: 1px solid $color-grey;
 }
 .panel-group .panel-heading + .panel-collapse > .panel-body,
 .panel-group .panel-heading + .panel-collapse > .list-group {
-  border-top: 1px solid $colorGrey;
+  border-top: 1px solid $color-grey;
 }
 .panel-group .panel-footer {
   border-top: 0;
 }
 .panel-group .panel-footer + .panel-collapse .panel-body {
-  border-bottom: 1px solid $colorGrey;
+  border-bottom: 1px solid $color-grey;
 }
 .panel-default {
-  color: $colorFont;
-  border-color: $colorGrey;
+  color: $color-font;
+  border-color: $color-grey;
 }
 .panel-default > .panel-heading {
-  color: $colorFont;
-  background-color: darken($colorBackground, 5%);
-  border-color: $colorGrey;
+  color: $color-font;
+  background-color: darken($color-background, 5%);
+  border-color: $color-grey;
 }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: $colorGrey;
+  border-top-color: $color-grey;
 }
 .panel-default > .panel-heading .badge {
   color: #f5f5f5;
   background-color: #333333;
 }
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: $colorGrey;
+  border-bottom-color: $color-grey;
 }
 
-/*FOcus color*/
-a:focus {
-  /*outline: 2px auto $colorAccent;
-  outline-offset: -2px;*/
-}
+//Focus color
 
-input[type="file"]:focus,
-input[type="radio"]:focus,
-input[type="checkbox"]:focus {
-  outline: 5px auto $colorAccent;
+input[type='file']:focus,
+input[type='radio']:focus,
+input[type='checkbox']:focus {
+  outline: 5px auto $color-accent;
   outline-offset: -2px;
 }
 
-.btn:focus,
-.btn:active:focus,
-.btn.active:focus,
-.btn.focus,
-.btn:active.focus,
-.btn.active.focus {
-  /*outline: 5px auto $colorAccent;
-  outline-offset: -2px;*/
-}
-
 .form-control:focus {
-  border-bottom: 2px solid $colorAccent;
+  border-bottom: 2px solid $color-accent;
   outline: 0;
-  /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba($colorAccent, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba($colorAccent, 0.6);*/
 }
 
-/* Loading Bar*/
+//Loading Bar
 #loading-bar .bar {
-  background: $colorAccent;
+  background: $color-accent;
 }
 
-/* Fancy blur effect */
+//Fancy blur effect
 #loading-bar .peg {
-  -moz-box-shadow: $colorAccent 1px 0 6px 1px;
-  -ms-box-shadow: $colorAccent 1px 0 6px 1px;
-  -webkit-box-shadow: $colorAccent 1px 0 6px 1px;
-  box-shadow: $colorAccent 1px 0 6px 1px;
+  -moz-box-shadow: $color-accent 1px 0 6px 1px;
+  -ms-box-shadow: $color-accent 1px 0 6px 1px;
+  -webkit-box-shadow: $color-accent 1px 0 6px 1px;
+  box-shadow: $color-accent 1px 0 6px 1px;
 }
 
 #loading-bar-spinner .spinner-icon {
-  border-top-color:  $colorAccent;
-  border-left-color: $colorAccent;
+  border-top-color: $color-accent;
+  border-left-color: $color-accent;
 }
