--- a/sass/card.scss
+++ b/sass/card.scss
@@ -1,9 +1,9 @@
-/*Article Card*/
+//Article Card
 
-@import "colors.scss";
-@import "material-shadow.scss";
+@import 'colors.scss';
+@import 'material-shadow.scss';
 
-$header-height:     1.250em;
+$header-height:     1.25em;
 $title-line-height: 1.5em;
 $text-line-height:  1em;
 $text-lines:        2;
@@ -15,11 +15,13 @@ $card-spacing:      .313em;
 
 
 .card {
-	$height:    $header-height + 
-                $title-line-height + 
+
+    @include material-shadow(1);
+	$height:    $header-height +
+                $title-line-height +
                 ($text-line-height * $text-lines) +
                 $tag-line-height +
-                ($card-spacing * 2) + 
+                ($card-spacing * 2) +
                 ($card-padding * 2);
     
     min-height: $height;
@@ -30,19 +32,16 @@ $card-spacing:      .313em;
 	margin: 0;
 			
 	width: 100%;
-	border-bottom: 	1px solid $colorGrey;
+	border-bottom: 	1px solid $color-grey;
 	overflow: hidden;
 	position: relative;
-	background: $colorCardBackground;
+	background: $color-card-background;
 
     display: block;
 
     transition: all .25s ease-in-out !important;
     transition: box-shadow .25s ease-in-out;
-    //box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
-    @include material-shadow(1);
     transition: margin .25s ease-in-out;
-    margin: 0;
 }
 
     .card-header {
@@ -50,7 +49,7 @@ $card-spacing:      .313em;
     }
 
         .card .subject {
-            color: $colorGrey;
+            color: $color-grey;
             position: absolute;
             left: 0;
             right: 0;
@@ -59,10 +58,10 @@ $card-spacing:      .313em;
         }
 		
     .card:hover {
-	    background: darken($colorCardBackground, 5%);
-        transition: box-shadow .25s ease-in-out;
-        //box-shadow: 0 0px 4px 0 rgba(0,0,0,0.12), 0 4px 4px 0 rgba(0,0,0,0.24);
         @include material-shadow(2);
+	    background: darken($color-card-background, 5%);
+        transition: box-shadow .25s ease-in-out;
+        
         z-index: 98;
 		cursor: pointer;
 	}			
@@ -76,7 +75,7 @@ $card-spacing:      .313em;
 		white-space: nowrap;
 		text-overflow: ellipsis;
 
-		font-size: 	1.25em;
+		font-size: 1.25em;
 		line-height: 1.5em;
 	}
 		
@@ -87,7 +86,7 @@ $card-spacing:      .313em;
         min-height: $text-line-height * 2;
 		height: $text-line-height * 2;		
 			
-		font-size: 	.875em;
+		font-size: .875em;
 		line-height: $text-line-height;
 	}
 
@@ -126,7 +125,7 @@ $card-spacing:      .313em;
                 float: left;
                 margin-right: 5px;
                 clear: none;
-                color: $colorPrimary;
+                color: $color-primary;
             }    
             
         .card #icon {
@@ -149,73 +148,68 @@ $card-spacing:      .313em;
 		right: 10px;
 		font-size: 1em;
 		
-		opacity: 0.4;
-        filter: alpha(opacity=40); /* For IE8 and earlier */
+		opacity: .4;
+        filter: alpha(opacity=40); // For IE8 and earlier */
 	}
 
         .card .card-btn:hover{
             opacity: 1;
-            filter: alpha(opacity=100); /* For IE8 and earlier */
+            filter: alpha(opacity=100); // For IE8 and earlier */
             transition: opacity .2s ease-in-out;
         }
 
-    .card.active {        
-        background: darken($colorCardBackground, 15%);
+    .card.active {    
+        @include material-shadow(3);    
+        background: darken($color-card-background, 15%);
         transition: box-shadow .25s ease-in-out;
-        //box-shadow: 0 0px 6px 0 rgba(0,0,0,0.12), 0 6px 6px 0 rgba(0,0,0,0.24);
-        @include material-shadow(3);
         transition: margin .25s ease-in-out;
         margin: 10px -5px 10px -5px;
         width: auto;
         z-index: 99;
 	}		
 	    .card.active:hover {
-			background: darken($colorCardBackground, 20%);
-            //box-shadow: 0 0px 6px 0 rgba(0,0,0,0.12), 0 6px 6px 0 rgba(0,0,0,0.24);
+			background: darken($color-card-background, 20%);
             transition: margin .25s ease-in-out;
 		}
 
     .card.active .tag {
-        color: $colorFont;
+        color: $color-font;
     }
 		
 	.read {
         .title {
-            color: $colorGrey
+            color: $color-grey;
         }
         .text {
-            color: $colorGrey
+            color: $color-grey;
         }
         .tag {
             background: transparent;
-            color: $colorGrey
+            color: $color-grey;
         }
     }
 
 	.active-read {
         .title {
-            color: darken($colorGrey, 30%);
+            color: darken($color-grey, 30%);
         }
         .text {
-            color: darken($colorGrey, 30%);
+            color: darken($color-grey, 30%);
         }
         .tag {
-            color: darken($colorGrey, 30%);
+            color: darken($color-grey, 30%);
         }
         .subject {
-            color: darken($colorGrey, 30%);
+            color: darken($color-grey, 30%);
         }
     }
 
 .card.ng-hide:not(.ng-hide-animate) {
-  /* These are just alternative ways of hiding an element */
   display: block !important;
   transition: all .25s ease-in-out !important;
-  height: 0px !important;
-  max-height: 0px !important;
-  min-height: 0px !important;
-  padding: 0px !important;
+  height: 0 !important;
+  max-height: 0 !important;
+  min-height: 0 !important;
+  padding: 0 !important;
   border: none;
-  /*position: absolute;
-  top: -9999px;*/
 }
