--- a/sass/comments.scss
+++ b/sass/comments.scss
@@ -21,5 +21,5 @@
 
 .comments-wrapper .info-wrapper .time-stamp {
 	font-size: .75em;
-	color: darken($colorGrey, 18%);
+	color: darken($color-grey, 18%);
 }
