--- a/sass/viewer.scss
+++ b/sass/viewer.scss
@@ -19,8 +19,8 @@ $actPadding: 8px;
 	overflow: hidden;
 
 	border-radius: 2px;
-	/*border: 1px solid $colorGrey;*/
-	background: $colorCardBackground;
+	/*border: 1px solid $color-grey;*/
+	background: $color-card-background;
 	//box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
 	@include material-shadow(1);
 }
@@ -35,7 +35,7 @@ $actPadding: 8px;
 }
 
 .article-view #subject {
-    color: $colorGrey;
+    color: $color-grey;
 	font-size: 12px;
 	line-height: 15px;
 	margin-top: 20px;
@@ -46,13 +46,13 @@ $actPadding: 8px;
 
 .btn-edit  {
 	visibility: visible;
-	color: $colorFont;	
-	background-color: $colorBackground;
+	color: $color-font;	
+	background-color: $color-background;
 	font-family: 'SourceSansPro', sans-serif;
 	clear: both;
 }
 .btn-edit:hover {
-	background-color: lighten($colorGrey, 8%);
+	background-color: lighten($color-grey, 8%);
 }
 
 .article-view .text.edit-field {
@@ -116,7 +116,7 @@ $actPadding: 8px;
 		$nav-icon-size: .75em;
 		$nav-circle-size: 2.5em;
 
-		background-color: $colorPrimary;
+		background-color: $color-primary;
 		
 		width: $nav-circle-size;
 		height: $nav-circle-size;
@@ -135,7 +135,7 @@ $actPadding: 8px;
 }
 	#image-wrapper .nav-arrow:hover{
 		cursor: pointer;
-		background-color: $colorPrimary700;	
+		background-color: $color-primary-700;	
 		//box-shadow: 0 0 4px 0 rgba(0,0,0,0.12), 0 4px 4px 0 rgba(0,0,0,0.24);
 		@include material-shadow(2);
 		transition: box-shadow .25s ease-in-out;
@@ -159,7 +159,7 @@ $actPadding: 8px;
 }
 
 .article-view #image-load-error {
-	color: $colorAccent;
+	color: $color-accent;
 }
 		
 .article-view .text-wrapper {
@@ -187,14 +187,14 @@ $actPadding: 8px;
 }
 
 .article-view #id {
-	color: $colorGrey;
+	color: $color-grey;
 	font-size: 14px;
 	line-height: 18px;
 	position: absolute;
 	left: 15px;
 	bottom: 15px;
 	a {
-		color: $colorGrey;
+		color: $color-grey;
 	}
 }
 
@@ -209,7 +209,7 @@ $actPadding: 8px;
 	height: $actBtnHeight + ($actPadding * 2);
 	padding: $actPadding;
 
-	border-top: 1px solid $colorGrey;
+	border-top: 1px solid $color-grey;
 	display: inline-block;
 }
 
@@ -224,23 +224,23 @@ $actPadding: 8px;
 }
 
 #action-area .btn-default{
-	color: $colorFont;
+	color: $color-font;
 }
 
 #action-area .btn-default:hover,
 #action-area .btn-default:focus{
-	background: rgba($colorFont, .12);
+	background: rgba($color-font, .12);
 }
 
 #action-area .btn-primary{
-	color: $colorPrimary;
+	color: $color-primary;
 }
 
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
 #action-area .btn-primary.open{
-	background: rgba($colorPrimary, .12);
+	background: rgba($color-primary, .12);
 	box-shadow: none;
 }
 
@@ -264,7 +264,7 @@ $actPadding: 8px;
     width: 100% !important;
     min-width: initial !important;
 	box-shadow: none;
-	background: rgba($colorPrimary, .12);
+	background: rgba($color-primary, .12);
 }
 
 #action-area #version-pagniation {
@@ -277,7 +277,7 @@ $actPadding: 8px;
 	}
 
 	.pagination > .disabled > a {
-		color: $colorGrey;
+		color: $color-grey;
 	}
 
 	.pagination-sm > li:first-child > a {
@@ -309,7 +309,7 @@ $actPadding: 8px;
 		text-align: center;
 		margin-right: 3px;
 
-		color: $colorPrimary;
+		color: $color-primary;
 	}
 
 	.pagination>.active>a {
@@ -322,8 +322,8 @@ $actPadding: 8px;
 		border-radius: 50%;
 		text-align: center;
 
-		background-color: $colorPrimary;
-		color: $colorPrimaryContrast;
+		background-color: $color-primary;
+		color: $color-primary-contrast;
 	}
 }
 
@@ -343,7 +343,7 @@ $actPadding: 8px;
 }
 
 #overflow-menu:hover {
-	background: lighten($colorGrey, 20%);
+	background: lighten($color-grey, 20%);
 }*/
 
 #overflow-btn{
@@ -394,13 +394,13 @@ $actPadding: 8px;
 
 	#overflow-menu .btn.btn-default.dropdown-toggle:hover {
 		cursor: pointer;
-		background-color: lighten($colorGrey, 20%);
+		background-color: lighten($color-grey, 20%);
 	}
 
 	#overflow-menu .btn.btn-default.dropdown-toggle:active,
 	#overflow-menu .btn.btn-default.dropdown-toggle:focus {
 		cursor: pointer;
-		background-color: lighten($colorGrey, 15%);
+		background-color: lighten($color-grey, 15%);
 	}
 
 #overflow-menu .dropdown-menu.open {
