--- a/styles/book-selector.css
+++ b/styles/book-selector.css
@@ -2,18 +2,17 @@
 /*Dark*/
 #right .btn.btn-default.dropdown-toggle {
   background-color: #009688;
-  color: white;
+  color: #fff;
   height: 56px;
   border: none;
   border-radius: 2px 0 0 0;
-  color: white;
   font-size: 16px;
   line-height: 19px;
-  /*box-shadow: 0 0px 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);*/
   z-index: 100;
 }
 
 #right .dropdown-menu.open {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   position: relative;
   top: -20px;
   left: 28%;
@@ -24,7 +23,6 @@
   background-color: #fff;
   border: none;
   border-radius: 2px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   z-index: 101;
 }
 
