--- a/styles/card.css
+++ b/styles/card.css
@@ -1,7 +1,7 @@
-/*Article Card*/
 /*Light*/
 /*Dark*/
 .card {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   min-height: 7.564em;
   max-height: 7.564em;
   height: 7.564em;
@@ -15,9 +15,7 @@
   display: block;
   transition: all .25s ease-in-out !important;
   transition: box-shadow .25s ease-in-out;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: margin .25s ease-in-out;
-  margin: 0;
 }
 
 .card-header {
@@ -34,9 +32,9 @@
 }
 
 .card:hover {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   background: #f2f2f2;
   transition: box-shadow .25s ease-in-out;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   z-index: 98;
   cursor: pointer;
 }
@@ -118,22 +116,20 @@
   top: 10px;
   right: 10px;
   font-size: 1em;
-  opacity: 0.4;
+  opacity: .4;
   filter: alpha(opacity=40);
-  /* For IE8 and earlier */
 }
 
 .card .card-btn:hover {
   opacity: 1;
   filter: alpha(opacity=100);
-  /* For IE8 and earlier */
   transition: opacity .2s ease-in-out;
 }
 
 .card.active {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   background: #d9d9d9;
   transition: box-shadow .25s ease-in-out;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   transition: margin .25s ease-in-out;
   margin: 10px -5px 10px -5px;
   width: auto;
@@ -179,14 +175,11 @@
 }
 
 .card.ng-hide:not(.ng-hide-animate) {
-  /* These are just alternative ways of hiding an element */
   display: block !important;
   transition: all .25s ease-in-out !important;
-  height: 0px !important;
-  max-height: 0px !important;
-  min-height: 0px !important;
-  padding: 0px !important;
+  height: 0 !important;
+  max-height: 0 !important;
+  min-height: 0 !important;
+  padding: 0 !important;
   border: none;
-  /*position: absolute;
-  top: -9999px;*/
 }
