Update spacing in scss files

--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -1,5 +1,5 @@
-@import "colors";
-@import "material-shadow.scss";
+@import 'colors';
+@import 'material-shadow.scss';
 
 $filterHeaderHeight: 24px;
 
