--- a/sass/page-card.scss
+++ b/sass/page-card.scss
@@ -1,5 +1,5 @@
-@import "colors.scss";
-@import "material-shadow.scss";
+@import 'colors.scss';
+@import 'material-shadow.scss';
 
 * {
   -webkit-box-sizing: border-box;
