--- a/sass/stream.scss
+++ b/sass/stream.scss
@@ -1,5 +1,5 @@
-@import "colors";
-@import "material-shadow.scss";
+@import 'colors';
+@import 'material-shadow.scss';
 
 $tMargin: 10px;
 
@@ -217,3 +217,4 @@ $tMargin: 10px;
             line-height: $bookActionInfoHeight;
         }
     }
+    
