--- a/styles/media.css
+++ b/styles/media.css
@@ -58,6 +58,6 @@
     left: 0;
     right: 0;
     font-family: 'Glyphicons-Halflings-Regular';
-    content: "\e043";
+    content: '\e043';
   }
 }
