--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,4 +1,4 @@
-/*Fonts*/
+//*Fonts*/
 
 @font-face {
     font-family: 'Montserrat';
@@ -30,8 +30,8 @@
 
 @font-face {
     font-family: 'Glyphicons-Halflings-Regular';
-    src: 	url('../packages/bootstrap/fonts/glyphicons-halflings-regular.woff2')	format("embedded-opentype"),
-            url('../packages/bootstrap/fonts/glyphicons-halflings-regular.woff2')	format("woff2"),
-            url('../packages/bootstrap/fonts/glyphicons-halflings-regular.woff')	format("woff"),
+    src: 	url('../packages/bootstrap/fonts/glyphicons-halflings-regular.woff2')	format('embedded-opentype'),
+            url('../packages/bootstrap/fonts/glyphicons-halflings-regular.woff2')	format('woff2'),
+            url('../packages/bootstrap/fonts/glyphicons-halflings-regular.woff')	format('woff'),
             url('../packages/bootstrap/fonts/glyphicons-halflings-regular.ttf')		format('truetype');
 }
