--- a/sass/media.scss
+++ b/sass/media.scss
@@ -65,6 +65,6 @@
         left: 0;
         right: 0;
         font-family: 'Glyphicons-Halflings-Regular';
-        content: "\e043";
+        content: '\e043';
     }
 }
